--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,7 @@
-Flask==0.10.1
-Jinja2==2.7.3
-MarkupSafe==0.23
-Werkzeug==0.9.6
-bzr==2.6.0
+argparse==1.2.1
+backports.ssl-match-hostname==3.4.0.2
+certifi==14.05.14
 decorator==3.4.0
-itsdangerous==0.24
 networkx==1.9
-powergrid==0.0.0
+tornado==4.0.1
 wsgiref==0.1.2
